--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Virtual Keyboard</title>
   </head>
   <body>
-    <script src="./scripts.js"></script>
+    <script src="./src/scripts.js" type="module"></script>
   </body>
 </html>
